scripts/deployer/assets/cloud-pak-deployer-wizard.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: cloud-pak-deployer-wizard
objects:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: cloud-pak-deployer-wizard
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: cloud-pak-deployer-wizard
    template:
      metadata:
        name: cloud-pak-deployer-wizard
        labels:
          app: cloud-pak-deployer-wizard
      spec:
        containers:
        - name: cloud-pak-deployer
          image: ${IMAGE}
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
          - name: wizard
            containerPort: 8080
            protocol: TCP
          command: ["/bin/sh","-xc"]
          args: 
            - /cloud-pak-deployer/cp-deploy.sh env wizard -v
        - name: oauth-proxy
          args:
            - -provider=openshift
            - -https-address=:8888
            - -http-address=
            - -email-domain=*
            - -upstream=http://localhost:8080
            - -tls-cert=/etc/tls/private/tls.crt
            - -tls-key=/etc/tls/private/tls.key
            - -cookie-secret-file=/etc/proxy/secrets/session_secret
            - -openshift-service-account=cloud-pak-deployer-sa
            - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
            - -skip-auth-regex=^/metrics
            - -openshift-sar={"namespace":"cloud-pak-deployer","resource":"services","verb":"get"}
          image: quay.io/openshift/origin-oauth-proxy:4.16
          imagePullPolicy: IfNotPresent
          ports:
            - name: oauth-proxy
              containerPort: 8888    
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/tls/private
              name: cloud-pak-deployer-wizard-tls
            - mountPath: /etc/proxy/secrets
              name: cloud-pak-deployer-wizard-proxy
        securityContext:
          runAsUser: 0
        volumes:
          - name: cloud-pak-deployer-wizard-tls
            secret:
              defaultMode: 420
              secretName: cloud-pak-deployer-wizard-tls
          - name: cloud-pak-deployer-wizard-proxy
            secret:
              defaultMode: 420
              secretName: cloud-pak-deployer-wizard-proxy
        serviceAccountName: cloud-pak-deployer-sa
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: cloud-pak-deployer-wizard-tls
    name: wizard-svc
  spec:
    selector:                  
      app: cloud-pak-deployer-wizard
    ports:
    - name: proxy
      port: 8888
      protocol: TCP
      targetPort: oauth-proxy
    type: ClusterIP

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: wizard
  spec:
    wildcardPolicy: None
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    port:
      targetPort: proxy
    to:
      kind: Service
      name: wizard-svc
      weight: null
parameters:
- description: Image to be used by the container in the Job
  name: IMAGE
